Added support for displaying objects created by specific user